syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";


service CharityAccount {
    option (aelf.csharp_state) = "AElf.Contracts.Charity.CharityAccountState";

   // rpc Initial (google.protobuf.Empty) returns (google.protobuf.Empty) {
   // }
//    rpc Create (CreateInput) returns (google.protobuf.Empty) {
//    }
//    rpc Issue (IssueInput) returns (google.protobuf.Empty) {
//    }
//    rpc Transfer (TransferInput) returns (google.protobuf.Empty) {
//    }
    rpc TransferFrom (TransferFromsInput) returns (google.protobuf.Empty) {
    }

}


message TokensInfo {
    string symbol = 1; // 货币的名字
    string token_name = 2; // token的名字
    sint64 supply = 3; // 发行量
    sint64 total_supply = 4; // 总发行量
    aelf.Address issuer = 6; // 发行方的地址
    // sint32 issue_chain_id = 7;
}

message CreatesInput {
    string symbol = 1; 
    string token_name = 2;
    sint64 total_supply = 3;
    aelf.Address issuer = 4;
    int32 issue_chain_id = 5;
}

message IssuesInput {
    string symbol = 1;
    sint64 amount = 2;
    string memo = 3;
    aelf.Address to = 4;
}

message TransfersInput {
    aelf.Address to = 1;
    string symbol = 2;
    sint64 amount = 3;
    string memo = 4;
}


message TransferFromsInput {
    aelf.Address from = 1;
    aelf.Address to = 2;
    string symbol = 3;
    sint64 amount = 4;
    string memo = 5;
}

// Events

message Transferred {
    option (aelf.is_event) = true;
    aelf.Address from = 1 [(aelf.is_indexed) = true];
    aelf.Address to = 2 [(aelf.is_indexed) = true];
    string symbol = 3 [(aelf.is_indexed) = true];
    sint64 amount = 4;
    string memo = 5;
}


